# SQLbinance

./: .gitignore  README.md  __init__.py  base.db  pyproject.toml  requirements.txt
classData/: conexion.py  consulta.sql  informe_data.py  transaccion_data.py
entidades/: Transaccion.py
src/SQLBinance/: __init__.py
src/SQLBinance/classData/: _SQLBinance.py  comprobante_data.py  conexion.py  consulta.sql  informe_data.py  transaccion_data.py
src/SQLBinance/entidades/: Comprobante.py  Informe.py  Transaccion.py
